# scuttlebutt

./: .gitignore  AUTHORS  README  README.md  configure.ac
src/: Makefile.am  main.cpp  message.hpp  scuttle.cpp  scuttle.hpp  scuttlemessage.hpp
